# polygon-agent-v2

./: .gitignore  README.md  main.py  pyproject.toml
polygon_agent_v2/: get_stock_data_from_polygon.py  polygon_agent.py
